# LoxInterpreter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  _config.yml  pyproject.toml  test.lox
.github/: dependabot.yml
.github/workflows/: format-and-lint.yml
docs/: environment.md  interpreter.md  language.md  parser.md  resolver.md  scanner.md  tasks.md
src/: __init__.py  exceptions.py  logger.py  models.py  preprocessor.py
src/builtins/: __init__.py  generic.py  io.py  maths.py
src/headers/: generics.lox  random.lox
src/internals/: array.py  callables.py  hash.py  http.py  string.py  types.py
src/interpreter/: __init__.py  interpreter.py  lox.py  resolver.py
src/lexer/: __init__.py  lexer.py  tokens.py
src/parser/: __init__.py  parser.py
src/utils/: cursor.py  environment.py  expr.py  printer.py  protocol.py
