[tool.poetry]
name = "lox"
version = "0.1.0"
description = ""
authors = ["FallenDeity <61227305+FallenDeity@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.263"
pre-commit = "^3.2.2"
pyright = "^1.1.304"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
